optimize ultrainmng's call and check logic to seed node

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -15,12 +15,13 @@ localtest=false
 worldstate=true
 wsSyncBlock=false
 monitor=true
+enableRestart=false
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
-chainSyncCycle=*/30 * * * * *
+chainSyncCycle=*/60 * * * * *
 worldstateSyncCycle=*/60 * * * * *
-resourceSyncCycle=0 * * * * *
-monitorSyncCycle=*/30 * * * * *
+resourceSyncCycle=0 0 * * * *
+monitorSyncCycle=*/60 * * * * *
 
 
