--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -18,12 +18,13 @@ wsSyncBlock=false
 logLevel=info
 syncBlockRatio=0.1
 monitor=false
+enableRestart=false
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
 chainSyncCycle=*/30 * * * * *
 worldstateSyncCycle=*/60 * * * * *
-resourceSyncCycle=*/60 * * * * *
+resourceSyncCycle=10 * * * * *
 monitorSyncCycle=*/20 * * * * *
 
 
