ultrainmng support dynamic increase of seed nodes from monitor and simplify seed configuration and startUTR scripts

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -16,6 +16,7 @@ worldstate=true
 wsSyncBlock=false
 monitor=true
 enableRestart=false
+seedFileUpdate=true
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
