--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -19,6 +19,7 @@ logLevel=info
 syncBlockRatio=0.1
 monitor=false
 enableRestart=false
+seedFileUpdate=false
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
