upload the last few lines of nod log file when restarting nod

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -17,6 +17,7 @@ wsSyncBlock=false
 monitor=true
 enableRestart=false
 seedFileUpdate=true
+nodLogPath=/root/log
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
