--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -20,6 +20,7 @@ syncBlockRatio=0.1
 monitor=false
 enableRestart=false
 seedFileUpdate=false
+nodLogPath=/log
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
