1. mroot set iff committee work 2. use data from db to fix all nodultrain down issue 3. set block one's proposer as genesis, and empty block's as utrio.empty

--- a/lightclient/CMakeLists.txt
+++ b/lightclient/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library( ultrainio_lightclient
         src/CommitteeSet.cpp
         src/ConfirmPoint.cpp
         src/EpochEndPoint.cpp
+        src/Helper.cpp
         src/LightClient.cpp
         src/LightClientCallback.cpp
         src/LightClientMgr.cpp
