--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(http_plugin)
 add_subdirectory(http_client_plugin)
 add_subdirectory(chain_plugin)
 add_subdirectory(chain_api_plugin)
+add_subdirectory(chain_info_api_plugin)
 #add_subdirectory(producer_plugin)
 add_subdirectory(producer_api_plugin)
 add_subdirectory(producer_uranus_plugin)
