add utrio.bank contract and remove extraneous transactions

--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(ultrainio.token)
 add_subdirectory(ultrainio.msig)
 add_subdirectory(ultrainio.rand)
 add_subdirectory(ultrainio.sudo)
+add_subdirectory(ultrainio.bank)
 add_subdirectory(multi_index_test)
 add_subdirectory(ultrainio.system)
 add_subdirectory(identity)
