--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -15,7 +15,7 @@ localtest=false
 worldstate=true
 wsSyncBlock=false
 monitor=true
-enableRestart=false
+enableRestart=true
 seedFileUpdate=true
 nodLogPath=/root/log
 
