--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -17,9 +17,9 @@ wsSyncBlock=false
 
 logLevel=info
 syncBlockRatio=0.1
-monitor=true
-enableRestart=true
-seedFileUpdate=true
+monitor=false
+enableRestart=false
+seedFileUpdate=false
 nodLogPath=/log
 
 ;定时时间相关（单位s）
