--- a/scripts/voterand/package.json
+++ b/scripts/voterand/package.json
@@ -22,6 +22,7 @@
     "typescript": "^2.8.3",
     "u3.js": "^0.3.4",
     "ultrascript": "^1.0.4",
+    "node-schedule": "1.3.2",
     "ini": "1.3.5"
   },
   "dependencies": {
