1. voterand read config from mng config.ini

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -8,6 +8,7 @@ path=/root/.local/share/ultrainio/nodultrain/config/config.ini
 nodpath=/root/workspace/ultrain-core/build/programs/nodultrain
 wsspath=/root/workspace/ultrain-core/build/programs/wssultrain
 mngpath=/root/workspace/ultrain-core/scripts/ultrainmng/src
+randToolsPath=/root/workspace/ultrain-core/scripts/rand
 
 ;localtest标志是否是本地测试
 localtest=true
