add head_block_num to monitor and update deploy scripts about voterand

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -8,6 +8,7 @@ path=/root/.local/share/ultrainio/nodultrain/config/config.ini
 nodpath=/root
 wsspath=/root
 mngpath=/root/ultrainmng/src
+randToolsPath=/root/voterand/scripts/rand
 
 ;localtest标志是否是本地测试
 localtest=false
