modify log dir to /log

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -18,7 +18,7 @@ wsSyncBlock=false
 monitor=true
 enableRestart=true
 seedFileUpdate=true
-nodLogPath=/root/log
+nodLogPath=/log
 
 ;定时时间相关（单位ms）
 blockSyncCycle=*/10 * * * * *
