fix Random.cpp memory leak

--- a/tests/crypto/CMakeLists.txt
+++ b/tests/crypto/CMakeLists.txt
@@ -14,3 +14,9 @@ add_executable( sha256_performance_test
         SHA256PerformanceTest.cpp )
 
 target_link_libraries( sha256_performance_test fc )
+
+#Random test
+add_executable( random_test
+        RandomTest.cpp )
+
+target_link_libraries( random_test ultrainio_crypto )
