--- a/scripts/voterand/package.json
+++ b/scripts/voterand/package.json
@@ -20,12 +20,12 @@
     "robin-lint": "^0.0.1",
     "tslint": "^5.4.3",
     "typescript": "^2.8.3",
-    "u3.js": "^0.3.4",
-    "ultrascript": "^1.0.4",
+    "u3.js": "0.3.6",
+    "ultrascript": "1.0.4",
     "node-schedule": "1.3.2",
     "ini": "1.3.5"
   },
   "dependencies": {
-    "ultrain-ts-lib": "^0.1.4"
+    "ultrain-ts-lib": "0.1.4"
   }
 }
