ultrainmng add hot update function of voterand program

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -22,6 +22,7 @@ monitor=false
 enableRestart=false
 seedFileUpdate=false
 nodLogPath=/log
+randpath=/root/workspace/ultrain-core/scripts/voterand/migrations
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
