--- a/scripts/voterand/package.json
+++ b/scripts/voterand/package.json
@@ -21,11 +21,12 @@
     "tslint": "^5.4.3",
     "typescript": "^2.8.3",
     "u3.js": "0.3.6",
-    "ultrascript": "1.0.4",
     "node-schedule": "1.3.2",
-    "ini": "1.3.5"
-  },
-  "dependencies": {
-    "ultrain-ts-lib": "0.1.4"
+    "ini": "1.3.5",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.2.2",
+    "babel-polyfill": "^6.26.0"
   }
 }
