add genesis-pk configuration setting in chain scheduling Reviewed by: xiaofen

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -18,7 +18,7 @@ wsSyncBlock=false
 
 logLevel=info
 syncBlockRatio=0.1
-monitor=false
+monitor=true
 enableRestart=false
 seedFileUpdate=false
 nodLogPath=/log
