--- a/consensus/rpos/CMakeLists.txt
+++ b/consensus/rpos/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB HEADERS "include/rpos/*.h")
 add_library( ultrainio_rpos
         src/BlockMsgPool.cpp
         src/Config.cpp
+        src/EvilBlsDetector.cpp
         src/EvilType.cpp
         src/FisherYates.cpp
         src/Genesis.cpp
