generate the private key used by config
reviewed by: feifan

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,10 +6,10 @@ add_executable( ws2json ws2json.cpp)
 target_include_directories( ws2json PRIVATE ${Boost_INCLUDE_DIR} )
 target_link_libraries( ws2json PRIVATE fc ultrainio_chain chainbase)
 
-add_executable( sk2bls_keypair
-        Sk2BlsKeypair.cpp)
-target_link_libraries( sk2bls_keypair ultrainio_base ultrainio_crypto )
-
 add_executable( bls_keypair_gen
         BlsKeyPairGenerator.cpp)
 target_link_libraries( bls_keypair_gen ultrainio_base ultrainio_crypto )
+
+add_executable( committee_sk_gen
+        CommitteeSkGenerator.cpp)
+target_link_libraries( committee_sk_gen ultrainio_base ultrainio_crypto ultrainio_chain)
