seed node restart optimization

--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -19,7 +19,7 @@ wsSyncBlock=false
 logLevel=info
 syncBlockRatio=0.1
 monitor=true
-enableRestart=false
+enableRestart=true
 seedFileUpdate=false
 nodLogPath=/log
 randpath=/root/workspace/ultrain-core/scripts/voterand/migrations
