modify the default /root dir to the user's home directory(~)

--- a/scripts/deploy/ultrainmng/config.ini
+++ b/scripts/deploy/ultrainmng/config.ini
@@ -4,11 +4,11 @@ endpoint = :8888
 url = http://47.52.43.102:3335/api/remoteEndpoint
 
 ;nodultrain路径
-path=/root/.local/share/ultrainio/nodultrain/config/config.ini
-nodpath=/root
-wsspath=/root
-mngpath=/root/ultrainmng/src
-randToolsPath=/root/voterand/scripts/rand
+path=~/.local/share/ultrainio/nodultrain/config/config.ini
+nodpath=~
+wsspath=~
+mngpath=~/ultrainmng/src
+randToolsPath=~/voterand/scripts/rand
 
 ;localtest标志是否是本地测试
 localtest=false
