--- a/scripts/ultrainmng/config.ini
+++ b/scripts/ultrainmng/config.ini
@@ -4,11 +4,11 @@ endpoint = :8888
 url = http://47.52.43.102:3335/api/remoteEndpoint
 
 ;nodultrain路径
-path=/root/.local/share/ultrainio/nodultrain/config/config.ini
-nodpath=/root/workspace/ultrain-core/build/programs/nodultrain
-wsspath=/root/workspace/ultrain-core/build/programs/wssultrain
-mngpath=/root/workspace/ultrain-core/scripts/ultrainmng/src
-randToolsPath=/root/workspace/ultrain-core/scripts/rand
+path=~/.local/share/ultrainio/nodultrain/config/config.ini
+nodpath=~/workspace/ultrain-core/build/programs/nodultrain
+wsspath=~/workspace/ultrain-core/build/programs/wssultrain
+mngpath=~/workspace/ultrain-core/scripts/ultrainmng/src
+randToolsPath=~/workspace/ultrain-core/scripts/rand
 
 ;localtest标志是否是本地测试
 localtest=true
@@ -22,7 +22,7 @@ monitor=true
 enableRestart=true
 seedFileUpdate=false
 nodLogPath=/log
-randpath=/root/workspace/ultrain-core/scripts/voterand/migrations
+randpath=~/workspace/ultrain-core/scripts/voterand/migrations
 
 ;定时时间相关（单位s）
 blockSyncCycle=*/10 * * * * *
