Encode confidential config info. reviewed by nana

--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory( wssultrain )
 add_subdirectory( ultrainio-launcher )
 add_subdirectory( ultrainio-applesedemo )
 add_subdirectory( ultrainio-abigen )
+add_subdirectory( cryultrain )
