optimize some code 1. add class StringUtils in base lib 2. refactor Multi sign/vote Evil 3. refactor find appropriate CommitteeSet for block id
reviewed by: wangxiao

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB HEADERS "include/base/*.h")
 add_library( ultrainio_base
         src/Hex.cpp
+        src/StringUtils.cpp
         ${HEADERS} )
 
 target_link_libraries( ultrainio_base )
