--- a/consensus/rpos/CMakeLists.txt
+++ b/consensus/rpos/CMakeLists.txt
@@ -3,11 +3,13 @@ file(GLOB HEADERS "include/rpos/*.h")
 add_library( ultrainio_rpos
         src/BlockMsgPool.cpp
         src/Config.cpp
+        src/Evidence.cpp
+        src/EvidenceFactory.cpp
         src/EvidenceMultiSign.cpp
+        src/EvidenceNull.cpp
         src/EvilBlsDetector.cpp
         src/EvilDDosDetector.cpp
         src/EvilMultiSignDetector.cpp
-        src/EvilType.cpp
         src/FisherYates.cpp
         src/Genesis.cpp
         src/MsgBuilder.cpp
