--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,7 +5,7 @@ add_subdirectory(http_client_plugin)
 add_subdirectory(chain_plugin)
 add_subdirectory(chain_api_plugin)
 add_subdirectory(chain_info_api_plugin)
-add_subdirectory(producer_uranus_plugin)
+add_subdirectory(producer_rpos_plugin)
 add_subdirectory(wallet_plugin)
 add_subdirectory(wallet_api_plugin)
 add_subdirectory(txn_test_gen_plugin)
