--- a/plugins/kcp_plugin/CMakeLists.txt
+++ b/plugins/kcp_plugin/CMakeLists.txt
@@ -3,5 +3,5 @@ add_library( kcp_plugin
              kcp_plugin.cpp
              ${HEADERS} )
 
-target_link_libraries( kcp_plugin chain_plugin producer_rpos_plugin appbase fc ultrainio_p2p )
+target_link_libraries( kcp_plugin chain_plugin producer_rpos_plugin appbase fc ultrainio_p2p ultrainio_kcp)
 target_include_directories( kcp_plugin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/../chain_interface/include  "${CMAKE_CURRENT_SOURCE_DIR}/../../libraries/appbase/include")
