Add zero knowledge proof interface to wasm.

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory( core )
 add_subdirectory( crypto )
 add_subdirectory( lightclient )
 add_subdirectory( rpos )
+add_subdirectory( vendor )
