Add macro to control ZKP feature, and modify Zkp contract.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,8 @@ if(UNIX)
     set(whole_archive_flag "-force_load")
     set(no_whole_archive_flag "")
   else()
+    set(ENABLE_ZKP 1)
+    add_definitions(-D ENABLE_ZKP)
     set(whole_archive_flag "--whole-archive")
     set(no_whole_archive_flag "--no-whole-archive")
   endif()
