--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(ultrainio.rand)
 add_subdirectory(ultrainio.bank)
 add_subdirectory(multi_index_test)
 add_subdirectory(ultrainio.system)
+add_subdirectory(ultrainio.res)
 add_subdirectory(stltest)
 add_subdirectory(test.inline)
 add_subdirectory(economic)
