apply gm to consensus

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project( ULTRAINIO )
 
 enable_testing()
 
-add_definitions(-DULTRAIN_SUPPORT_TYPESCRIPT -DULTRAIN_CONFIG_CONTRACT_PARAMS -DULTRAIN_TRX_SUPPORT_GM)
+add_definitions(-DULTRAIN_SUPPORT_TYPESCRIPT -DULTRAIN_CONFIG_CONTRACT_PARAMS -DULTRAIN_TRX_SUPPORT_GM -DULTRAIN_CONSENSUS_SUPPORT_GM)
 
 set(ULTRAIN_TRX_SUPPORT_GM ON)
 
