--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -1,18 +1,18 @@
-file(GLOB HEADERS "include/crypto/*.h")
-add_library( ultrainio_crypto
-        src/Bls.cpp
-        src/Digest.cpp
-        src/Ed25519.cpp
-        src/PrivateKey.cpp
-        src/PublicKey.cpp
-        src/Random.cpp
-        src/Signature.cpp
+# ed25519
+
+file(GLOB HEADERS "include/crypto/ed25519/*.h")
+add_library( ultrainio_ed25519
+        src/ed25519/Digest.cpp
+        src/ed25519/Ed25519.cpp
+        src/ed25519/PrivateKey.cpp
+        src/ed25519/PublicKey.cpp
+        src/ed25519/Signature.cpp
         ${HEADERS} )
 
 include_directories( "${PROJECT_SOURCE_DIR}/vendor/boringssl/include" )
 
-target_link_libraries( ultrainio_crypto ultrainio_pbc ultrainio_base fiat fc)
-target_include_directories( ultrainio_crypto PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_link_libraries( ultrainio_ed25519 ultrainio_pbc ultrainio_base fiat fc)
+target_include_directories( ultrainio_ed25519 PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/crypto" )
 
 # gm
 
@@ -34,3 +34,15 @@ add_library( ultrainio_gm
 target_link_libraries( ultrainio_gm ultrainio_base fc)
 
 target_include_directories( ultrainio_gm PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/crypto" )
+
+# ultrainio_crypto
+file(GLOB HEADERS "include/crypto/*.h")
+add_library( ultrainio_crypto
+        src/Bls.cpp
+        src/Random.cpp
+        ${HEADERS} )
+
+#include_directories( "${PROJECT_SOURCE_DIR}/vendor/boringssl/include" )
+
+target_link_libraries( ultrainio_crypto ultrainio_gm ultrainio_ed25519)
+target_include_directories( ultrainio_crypto PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/" )
