--- a/tests/crypto/CMakeLists.txt
+++ b/tests/crypto/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries( bls_performance_test ultrainio_crypto )
 add_executable( ed25519_performance_test
         Ed25519PerformanceTest.cpp )
 
-target_link_libraries( ed25519_performance_test ultrainio_crypto fc )
+target_link_libraries( ed25519_performance_test ultrainio_ed25519 fc )
 
 #Ed25519 performance test
 add_executable( sha256_performance_test
