worldstate merkle project reviewed by: shenyufeng

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -13,6 +13,8 @@ add_subdirectory(txn_test_gen_plugin)
 add_subdirectory(mongo_db_plugin)
 add_subdirectory(sync_net_plugin)
 add_subdirectory(sync_net_api_plugin)
+add_subdirectory(state_history_plugin)
+add_subdirectory(state_merkle_plugin)
 
 # Forward variables to top level so packaging picks them up
 set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
