refactor ed25519/sm2/secp256k1 performance test

--- a/tests/crypto/CMakeLists.txt
+++ b/tests/crypto/CMakeLists.txt
@@ -3,13 +3,7 @@ add_executable( bls_performance_test
 
 target_link_libraries( bls_performance_test ultrainio_crypto )
 
-#Ed25519 performance test
-add_executable( ed25519_performance_test
-        Ed25519PerformanceTest.cpp )
-
-target_link_libraries( ed25519_performance_test ultrainio_ed25519 fc )
-
-#Ed25519 performance test
+#sha256 performance test
 add_executable( sha256_performance_test
         SHA256PerformanceTest.cpp )
 
