--- a/tests/crypto/gm/CMakeLists.txt
+++ b/tests/crypto/gm/CMakeLists.txt
@@ -2,4 +2,4 @@
 add_executable( gmprofile_test
         GmProfileTest.cpp)
 
-target_link_libraries( gmprofile_test ultrainio_gm )
+target_link_libraries( gmprofile_test ultrainio_gm ultrainio_ed25519)
